--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-vector-icons": "^9.2.0",
     "typescript": "^4.9.5",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4"
+    "react-native-reanimated": "~2.14.4",
+    "@types/react": "~18.0.27"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
